--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode,objective-c
+SIMBL.r
