--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/xcode,objective-c
-# Edit at https://www.toptal.com/developers/gitignore?templates=xcode,objective-c
+# Created by https://www.toptal.com/developers/gitignore/api/xcode,objective-c,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=xcode,objective-c,macos
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 ### Objective-C ###
 # Xcode
@@ -85,5 +113,4 @@ iOSInjectionProject/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-# End of https://www.toptal.com/developers/gitignore/api/xcode,objective-c
-SIMBL.r
+# End of https://www.toptal.com/developers/gitignore/api/xcode,objective-c,macos
